--- a/games/index.html
+++ b/games/index.html
@@ -57,10 +57,18 @@
 		<h2 class="project-title">Forza Motorsport</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae justo eget magna fermentum iaculis eu non diam. Nibh venenatis cras sed felis eget velit aliquet sagittis. Volutpat consequat mauris nunc congue nisi vitae. Suscipit adipiscing bibendum est ultricies. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Egestas sed tempus urna et pharetra pharetra massa. Id interdum velit laoreet id. Nibh mauris cursus mattis molestie a iaculis at erat. Egestas quis ipsum suspendisse ultrices gravida. Orci eu lobortis elementum nibh tellus molestie nunc non.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="project-div">
+			<div class="project-content-left">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+			<div class="project-content-right">
+				<p>Tristique nulla aliquet enim tortor at auctor urna. Nullam vehicula ipsum a arcu. Quis varius quam quisque id diam vel quam elementum pulvinar. Neque viverra justo nec ultrices dui sapien eget. Ultricies leo integer malesuada nunc vel risus commodo. A erat nam at lectus. Nec feugiat in fermentum posuere urna. Sapien eget mi proin sed. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere lorem. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. Risus viverra adipiscing at in. Et malesuada fames ac turpis. Quam id leo in vitae. Vulputate ut pharetra sit amet aliquam id diam. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing.</p>
 			</div>
 		</div>
 	</div>
@@ -78,8 +86,8 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>The full soundtrack is available for free from Bandcamp, embedded here. The game is similarly available for free below.</p>
-				<a class="undecorated-links" target="_self" href="https://tyler-eichten.itch.io/roboxing">
-					<button class="download-button">Download at Itch.io</button>
+				<a class="undecorated-links" href="https://tyler-eichten.itch.io/roboxing">
+					<button class="download-button">Download on Itch.io</button>
 				</a>
 			</div>
 		</div>
@@ -99,7 +107,38 @@
 			</div>
 		</div>
 	</div>
-	
+<!--Student Projects-->
+	<div id="StudentGames">
+	<hr class="main_hr">
+		<h2 class="project-title">Other Student Games</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3>The House Where They Dwell</h3>
+				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Donec ultrices tincidunt arcu non sodales. Quam lacus suspendisse faucibus interdum posuere lorem. Eget sit amet tellus cras adipiscing. Sit amet cursus sit amet dictum. Elementum sagittis vitae et leo duis ut. Et netus et malesuada fames ac turpis egestas integer.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. Give it a shot...if you dare.</p>
+				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
+					<button class="download-button">Download on Steam</button>
+				</a>
+			</div>
+		</div>
+		<div class="project-div">
+			<hr class="minor_hr">
+			<div class="project-content-left">
+				<h3>Sumra</h3>
+				<p>Spring will come again.<br><br>Vitae tempus quam pellentesque nec nam aliquam sem et. Tincidunt id aliquet risus feugiat in ante metus dictum. Mauris vitae ultricies leo integer malesuada nunc vel. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Neque egestas congue quisque egestas diam in. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Feugiat in ante metus dictum at tempor commodo ullamcorper a. Malesuada fames ac turpis egestas maecenas. In arcu cursus euismod quis viverra nibh.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra. Note that this game is not accessible." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p></p>
+				<a class="undecorated-links" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">
+					<button class="download-button">Download from Google Drive</button>
+				</a>
+			</div>
+		</div>
+	</div>
 </div>
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
