--- a/other/index.html
+++ b/other/index.html
@@ -71,6 +71,7 @@
 			</div>
 		</div>
 		<div class="project-div">
+			<hr class="minor_hr">
 			<div class="project-content-left">
 				<h3>Region Utility</h3>
 				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
@@ -84,12 +85,14 @@
 				<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
 			</div>
 			<div class="project-content-right">
+				<hr class="minor_hr">
 				<h3>Snap End of Media Items</h3>
-				<p>Snaps selected media items to the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
+				<p>Moves selected media items so their ends meet the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
 			</div>
 		</div>
 		<div class="project-div">
 			<div class="project-content-left">
+				<hr class="minor_hr">
 				<h3>Region Prefix/Suffix</h3>
 				<p>For adjusting Region names en masse.<br><br>Largely edited from Acendan's region enumeration script, and similar to the ReaPack standards Find And Replace in Regions/Markers (also written by Acendan). Please go look at his scripts and other work, especially with the UCS.</p>
 			</div>
@@ -99,7 +102,7 @@
 		</div>
 	</div>
 <!--Solar Science-->
-	<div id="Solar Science">
+	<div id="SolarScience">
 	<hr class="main_hr">
 		<div class="project-div">
 			<div class="project-content-left">
@@ -117,13 +120,28 @@
 			</div>
 		</div>
 	</div>
+<!--Sound Redesigns-->
+	<div id="SoundRedesigns">
+	<hr class="main_hr">
+		<h2 class="project-title">Sound Redesigns</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3>Halo 3: ODST</h3>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+			<div class="project-content-right">
+				<h3>Placeholder 2: The Return of Audio</h3>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/vuzy2OsVy1c" title="YouTube video player with a funny placeholder video, showing sequences from The Simpsons overdubbed with sfx and voicelines from the 1998 game Half-Life." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
 <!--In Living Color (art)-->
 	<div id="InLivingColor">
 	<hr class="main_hr">
-		<h2 class="project-title">In Living Color</h2>
+		<h2 class="project-title">In Living Color (Art)</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p>Lorem ipsum dolor sit amet.</p>
+				<p>Aliquam sem et tortor consequat id porta nibh venenatis cras. Parturient montes nascetur ridiculus mus mauris vitae. Sit amet porttitor eget dolor. Vivamus at augue eget arcu dictum varius duis at consectetur. Praesent elementum facilisis leo vel fringilla est ullamcorper. Suspendisse interdum consectetur libero id faucibus. Aliquam id diam maecenas ultricies mi eget. Amet cursus sit amet dictum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
 			</div>
 			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo.svg" alt="Temp" />
 		</div>
