--- a/games/index.html
+++ b/games/index.html
@@ -29,7 +29,7 @@
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a class="undecorated-links" href="../resume.pdf">
+			<a class="undecorated-links" target="_blank" href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
