--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a class="undecorated-links" href="resume.pdf">
+			<a class="undecorated-links" target="_blank" href="resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -60,7 +60,7 @@
 	</div>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
-		<p>This site is under construction as I learn HTML. Check back later!</p>
+		<p>This site is under construction as I learn HTML.</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
@@ -92,7 +92,7 @@
 				</a>
 			</div>
 			<div class="content-quick-link-separator">
-				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other#ReaperScripts">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="Temp" />
 					<h4>Reaper Scripts</h4>
