--- a/other/index.html
+++ b/other/index.html
@@ -29,7 +29,7 @@
 				<button class="header-button">Games</button>
 			</a>
 			<button class="header-button-disabled">Other</button>
-			<a class="undecorated-links" href="../resume.pdf">
+			<a class="undecorated-links" target="_blank" href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
