--- a/games/index.html
+++ b/games/index.html
@@ -26,8 +26,8 @@
 				<button class="header-button">Home</button>
 			</a>
 			<button class="header-button-disabled">Games</button>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
-				<button class="header-button">Other</button>
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more">
+				<button class="header-button">More</button>
 			</a>
 			<a class="undecorated-links" target="_blank" href="../resume.pdf">
 				<button class="header-button">Resume</button>
@@ -110,7 +110,7 @@
 <!--Student Projects-->
 	<div id="StudentGames">
 	<hr class="main_hr">
-		<h2 class="project-title">Other Student Games</h2>
+		<h2 class="project-title">Student Games</h2>
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3>The House Where They Dwell</h3>
