--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
-				<button class="header-button">Other</button>
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more">
+				<button class="header-button">More</button>
 			</a>
 			<a class="undecorated-links" target="_blank" href="resume.pdf">
 				<button class="header-button">Resume</button>
@@ -92,7 +92,7 @@
 				</a>
 			</div>
 			<div class="content-quick-link-separator">
-				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other#ReaperScripts">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#ReaperScripts">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="Temp" />
 					<h4>Reaper Scripts</h4>
