--- a/more/index.html
+++ b/more/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Logan Hardin portfolio- Other</title>
+<title>Logan Hardin portfolio- More</title>
 <link rel="stylesheet" href="../mystyle.css">
 <link rel="icon" type="image/x-icon" href="../images/favicon.png">
 </head>
@@ -28,7 +28,7 @@
 			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
-			<button class="header-button-disabled">Other</button>
+			<button class="header-button-disabled">More</button>
 			<a class="undecorated-links" target="_blank" href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
