--- a/more/index.html
+++ b/more/index.html
@@ -143,7 +143,11 @@
 			<div class="project-content-left">
 				<p>Aliquam sem et tortor consequat id porta nibh venenatis cras. Parturient montes nascetur ridiculus mus mauris vitae. Sit amet porttitor eget dolor. Vivamus at augue eget arcu dictum varius duis at consectetur. Praesent elementum facilisis leo vel fringilla est ullamcorper. Suspendisse interdum consectetur libero id faucibus. Aliquam id diam maecenas ultricies mi eget. Amet cursus sit amet dictum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
 			</div>
-			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo.svg" alt="Temp" />
+			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video player, with a screen recording of In Living Color running." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<p></p>
+			<a class="undecorated-links" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">
+				<button class="download-button">Download the program</button>
+			</a>
 		</div>
 	</div>
 </div>
