Added Thesis section
Added a project div for my Thesis on the Games page, although More might be the better place for it.

--- a/games/index.html
+++ b/games/index.html
@@ -72,6 +72,25 @@
 			</div>
 		</div>
 	</div>
+<!--Thesis-->
+	<div id="Thesis">
+	<hr class="main_hr">
+		<h2 class="project-title">Thesis</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games<br><br>Sed id semper risus in hendrerit gravida rutrum. Amet nisl suscipit adipiscing bibendum est ultricies integer. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. A iaculis at erat pellentesque adipiscing commodo elit at. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Nam at lectus urna duis convallis convallis. Dictum non consectetur a erat nam. Enim sit amet venenatis urna cursus eget.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
+					<button class="download-button">Check out the GitHub Project</button>
+				</a>
+				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
+					<button class="download-button">Read the paper</button>
+				</a>
+			</div>
+		</div>
+	</div>
 <!--Roboxing-->
 	<div id="Roboxing">
 	<hr class="main_hr">
@@ -114,11 +133,11 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3>The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Donec ultrices tincidunt arcu non sodales. Quam lacus suspendisse faucibus interdum posuere lorem. Eget sit amet tellus cras adipiscing. Sit amet cursus sit amet dictum. Elementum sagittis vitae et leo duis ut. Et netus et malesuada fames ac turpis egestas integer.</p>
+				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum.<br><br>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. </p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. Give it a shot...if you dare.</p>
+				<p>Give it a shot...if you dare.</p>
 				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
 					<button class="download-button">Download on Steam</button>
 				</a>
