Replacing Lorem Ipsum
Adding links, filling in proper content, etc.

--- a/games/index.html
+++ b/games/index.html
@@ -133,7 +133,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3>The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum.<br><br>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. </p>
+				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum.<br><br>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -147,13 +147,29 @@
 			<hr class="minor_hr">
 			<div class="project-content-left">
 				<h3>Sumra</h3>
-				<p>Spring will come again.<br><br>Vitae tempus quam pellentesque nec nam aliquam sem et. Tincidunt id aliquet risus feugiat in ante metus dictum. Mauris vitae ultricies leo integer malesuada nunc vel. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Neque egestas congue quisque egestas diam in. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Feugiat in ante metus dictum at tempor commodo ullamcorper a. Malesuada fames ac turpis egestas maecenas. In arcu cursus euismod quis viverra nibh.</p>
+				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4, which led to plenty of fun with Blueprints and the native audio engine, and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra. Note that this game is not accessible." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p></p>
+				<p>For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards. You can view the project's website <a class="decorated-links" href="https://sumragame.wixsite.com/sumra">here</a> for more information.</p>
 				<a class="undecorated-links" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">
 					<button class="download-button">Download from Google Drive</button>
+				</a>
+			</div>
+		</div>
+		<div class="project-div">
+			<hr class="minor_hr">
+			<div class="project-content-left">
+				<h3>FooFarYall</h3>
+				<p>Local Competitive minigames.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded on-site during that time. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a viable career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
+				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=ffffff/linkcol=0687f5/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=ffffff/linkcol=0687f5/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>You can find both tracks on my Bandcamp album of miscellaneous tracks, and try the game with a friend if you like. </p>
+				<a class="undecorated-links" href="https://embyrs.itch.io/foofaryall">
+					<button class="download-button">Download from Itch.io</button>
 				</a>
 			</div>
 		</div>
