Filled content for THWTD
Also made Tumblr logo _slightly_ smaller

--- a/games/index.html
+++ b/games/index.html
@@ -133,11 +133,11 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3>The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>Quis commodo odio aenean sed adipiscing diam. Sit amet dictum sit amet justo donec enim diam. Amet justo donec enim diam. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum.<br><br>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content.</p>
+				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games (fellow students) where you and your ghost-hunting TV show crew escape the house. It was built in Unreal Engine 4 using the native audio engine and Blueprints, and version controlled with Git. I operated as Audio Director and worked with 5 other Sound Design students to produce the score, VO, sound effects, and ultimate audio vision, as well as being the primary audio implementation and scripter.<br><br>Some of the largest challenges we faced were with sheer audio scope, due to the large variety of enemies, items, and physics interactions between them. Dealing with audio for split-screen was no slouch either, although features of UE4 developed for Fortnite helped immensely. I'm most proud of the physics audio (where we covered it) and the VO.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Give it a shot...if you dare.</p>
+				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content.</p>
 				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
 					<button class="download-button">Download on Steam</button>
 				</a>
@@ -162,8 +162,8 @@
 			<div class="project-content-left">
 				<h3>FooFarYall</h3>
 				<p>Local Competitive minigames.<br><br>A silly little Western game, made for Chillennium Game Jam 2016, using Unity and <a class="decorated-links" href="https://fungusgames.com/">Fungus,</a> played on one keyboard. All music (and some sound effects) were recorded on-site during that time. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a viable career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum & the LIVE Lab.</a></p>
-				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=ffffff/linkcol=0687f5/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
-				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=ffffff/linkcol=0687f5/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
