Adding Alt Text
Also centered Quick Links items, which is only noticeable on desktop view.

--- a/games/index.html
+++ b/games/index.html
@@ -12,7 +12,7 @@
 <div class="content">
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="../images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="../images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
