--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="content">
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -70,7 +70,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars (a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray) speeding towards the camera and to the right along a track with red and white curbing and an open blue sky behind." />
 					<h4>Forza Motorsport</h4>
 				</div>
 				</a>
@@ -78,7 +78,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="A preview image for Roboxing, showing one of the titular robot boxer characters. They float beneath a light in a dimly lit gym, their red and white triangular body giving the appearance of a wrestling singlet. Their red boxing gloves float in front in the ready position, and their lumpy round head floats above the body with two oval eyes neutrally blinking back at the viewer." />
 					<h4>Roboxing</h4>
 				</div>
 				</a>
@@ -86,7 +86,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Triseum-Preview.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Triseum-Preview.jpg" alt="A preview image for Triseum & Live Lab, bearing the Triseum logo. It sits on a circular grid remeniscent of the unit circle, and both of those lay over a blue image of space, as though in a nebula." />
 					<h4>Triseum &#38; LIVE Lab</h4>
 				</div>
 				</a>
@@ -94,7 +94,7 @@
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#ReaperScripts">
 				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="Temp" />
+					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="A preview image for my Reaper Scripts, bearing the Reaper Digital Audio Workstation logo. On a black background, a round, guitar pick shaped form is created from overlapping green, brown, and blue circles. The shape of a white scythe forms in the negative space and stands out in front of the blob." />
 					<h4>Reaper Scripts</h4>
 				</div>
 				</a>
@@ -104,12 +104,12 @@
 	<hr class="main_hr">
 <!--Bio-->
 	<div class="content-bio-div">
-		<div>
+		<div class="content-bio-div-left">
 			<h2>Howdy!</h2>
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> [Main bio info will go here...this <i>is</i>  a site in progress after all, and my old bio page is years out of date.] <br><br> I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
 		</div>
-		<div>
-			<img id="img-bio" src="images/Me.jpg" alt="A photo of me!" />
+		<div class="content-bio-div-right">
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap." />
 		</div>
 	</div>
 </div>
